# dopagent_scraper

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  docker-compose.yml  items_dad.json  main.py  pyproject.toml  scrapy.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
scraper/: constants.py  middlewares.py  settings.py  utils.py
scraper/items/: __init__.py  account_item.py  auth_token_item.py  installment_item.py  reference_token_item.py  report_item.py  transaction_item.py
scraper/loaders/: __init__.py  account_loader.py  auth_token_loader.py  installment_loader.py  reference_token_loader.py  report_loader.py  transaction_loader.py
scraper/pipelines/: __init__.py  account_pipeline.py  installment_pipeline.py  report_pipeline.py  transaction_pipeline.py
scraper/scraper/: constants.py  settings.py  utils.py
scraper/scraper/items/: account_item.py
scraper/scraper/loaders/: __init__.py  account_loader.py
scraper/scraper/pipelines/: account_pipeline.py
scraper/scraper/spiders/: __init__.py  dopagent_spider.py
scraper/scraper/spiders/accounts/: __init__.py  accounts_spider.py  selectors.py  utils.py
scraper/spiders/: __init__.py  selectors.py  utils.py
scraper/spiders/accounts/: __init__.py  accounts_spider.py  selectors.py  utils.py
scraper/spiders/auth/: __init__.py  auth_spider.py  selectors.py  utils.py
scraper/spiders/installments/: __init__.py  installments_spider.py  selectors.py  utils.py
scraper/spiders/reports/: __init__.py  reports_spider.py  selectors.py  utils.py
