[tool.poetry]
name = "dopagent_scraper"
version = "0.1.0"
description = ""
authors = ["Darshan A S <itisdarshan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
scrapyrt = {git = "https://github.com/scrapinghub/scrapyrt.git", rev = "pass-arguments-to-spider"}

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
rope = "^0.18.0"
black = "^20.8b1"
pylint = "^2.6.0"
flake8 = "^3.8.4"
bandit = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = false
